--- a/style.css
+++ b/style.css
@@ -1,26 +1,64 @@
 html {
-    background-color:blanchedalmond;
+    background-color:#0074d9;
+}
+
+.mainContainer {
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 #header {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    padding: 20px;
+    padding-left: 10px;
+    padding-top: 10px;
+    color: white;
+    font-weight: 100;
+}
+
+#subTitle{
+    display: flex;
+    color: black;
+    font-weight: 100;
+    font-size: 150%;
+    justify-content: left;
+    padding-left: 15px;
+    margin-top: 0;
 }
 
 #shelfImg{
     font-size: 300%
 }
+
 #pageTitle {
     font-size: 300%;
-    font-family: 'Vollkorn', sans-serif;
 }
 
-#toolbar {
+#toolbarContainer {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    background-color:#d2d2d2;
-    font-family: 'Vollkorn', sans-serif;
+    background: rgb(210,210,210);
+    font-family: inherit;
+    padding: 10px;
+    border-radius: 40px;
+    font-weight: 300;
+    font-size: 110%;
+}
+
+#addBookButton{
+    border: none;
+    border-radius: 50%;
+    padding: 13px;
+    background-color:#49a6f8;
+    outline: none;
+}
+
+#addBookButton:hover {
+    transform: scale(1.15);
+}
+
+#addBookButton:active {
+    transform: scale(1);
 }
