--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ html {
 #addBookButton{
     border: none;
     border-radius: 50%;
+    width: 65px;
     padding: 13px;
     background-color:#49a6f8;
     outline: none;
@@ -61,4 +62,59 @@ html {
 
 #addBookButton:active {
     transform: scale(1);
+}
+
+.book-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: #0074d9;
+    padding: 10px;
+    gap: 30px;
+}
+
+.book{
+    background-color: #49a6f8;
+    height: 300px;
+    width: 300px;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    border-radius: 15%;
+    font-weight: 100;
+}
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    margin-top: 10%;
+    margin-left: 10%;
+    left: 0;
+    top: 0;
+    width: 40%; 
+    height: 20%; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.8); 
+    
+}
+
+.modalContent{
+    color: white;
+    margin: auto;
+    padding: 70px;
+    width: 80%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
