--- a/style.css
+++ b/style.css
@@ -48,9 +48,11 @@ html {
 }
 
 #addBookButton{
-    border: none;
+    border: black;
+    border-style: solid;
+    border-width: 2px;
     border-radius: 50%;
-    width: 65px;
+    width: 72px;
     padding: 13px;
     background-color:#49a6f8;
     outline: none;
@@ -61,6 +63,25 @@ html {
 }
 
 #addBookButton:active {
+    transform: scale(1);
+}
+
+#saveBookInfo {
+    border: white;
+    border-style: solid;
+    border-width: 1.5px;
+    border-radius: 20%;
+    width: 75px;
+    padding: 13px;
+    background-color:#49a6f8;
+    outline: none;
+}
+
+#saveBookInfo:hover {
+    transform: scale(1.15);
+}
+
+#saveBookInfo:active {
     transform: scale(1);
 }
 
@@ -89,17 +110,14 @@ html {
     z-index: 1;
     margin-top: 10%;
     margin-left: 10%;
-    left: 0;
-    top: 0;
     width: 40%; 
-    height: 20%; 
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.8); 
-    
+    height: 30%; 
+    background-color: rgba(0, 0, 0, 0.8); 
 }
 
 .modalContent{
     color: white;
+    font-size: 125%;
     margin: auto;
     padding: 70px;
     width: 80%;
