--- a/style.css
+++ b/style.css
@@ -95,15 +95,32 @@ html {
 }
 
 .book{
-    background-color: #49a6f8;
+    display: flex;
+    align-items: left;
+    flex-direction: column;
+    box-shadow: 8px 5px 5px black;
+    border-width: 2px;
+    background: #f89b49;
     height: 300px;
-    width: 300px;
+    width: 275px;
     padding: 20px;
     font-size: 30px;
     text-align: center;
     border-radius: 15%;
     font-weight: 100;
-    margin: 10px 15px 10px 15px;
+}
+
+.newBook{
+    display: flex;
+    align-items: center;
+    font-family: inherit;
+    padding: 10px;
+    color: black;
+    border-radius: 40px;
+    text-shadow: 1px px 5px black;
+    font-weight: 300;
+    font-size: 65%;
+    margin-top: auto;
 }
 
 .modal{
