--- a/style.css
+++ b/style.css
@@ -149,18 +149,32 @@ html {
     font-weight: 100;
 }
 
-.bookTitle {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.bookInput {
     font-family: inherit;
-    padding: 10px;
+    padding: 8px;
     color: black;
-    border-radius: 40px;
-    text-shadow: 1px px 5px black;
+    box-sizing: border-box;
+    border: none;
     font-weight: 500;
     font-size: 70%;
-    margin-top: auto;
+    outline: none;
+    width: 100%;
+    padding-left: 35px;
+    margin-top: 4%;
+    background-image: url('https://img.icons8.com/windows/32/000000/book--v1.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.bookTitle {
+    align-items: center;
+    font-size: 70%;
+    font-weight: bolder;
+    max-height: 100px;
+}
+
+#bookAuthor {
+    background-image: url('https://img.icons8.com/ios/50/000000/hand-with-pen.png');
 }
 
 .newBook{
@@ -207,4 +221,22 @@ html {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+#footer {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 110%;
+  color: white;
+  padding: 10px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
+#signature {
+    margin-right: 10px;
 }
