--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 html {
     background-color:#0074d9;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  margin: 20px;
+  padding-bottom: 6rem;
+  min-height: 100%;
 }
 
 .mainContainer {
@@ -232,11 +241,13 @@ html {
   font-family: 'Courier New', Courier, monospace;
   font-size: 110%;
   color: white;
-  margin: 0;
   position: absolute;
+  right: 0;
   bottom: 0;
-  width: 100%;
-  height: 2.5rem;
+  left: 0;
+  padding: 1rem;
+  background-color: #0074d9;
+  text-align: center;
 }
 
 #footerWrap {
